<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:weightSum="20"
    android:orientation="vertical"
    android:background="@mipmap/app_background_foreground"
    tools:context=".MainActivity">






    <ImageView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="3.5"
       android:src="@mipmap/healthy_icon_foreground"

       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/purple_1000"
        android:gravity="center_horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="11"
            >


            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">




                <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
             android:gravity="center"
                    android:textColorHint="@color/green"
            android:textSize="20sp"
             android:inputType="textEmailAddress"
            android:hint="@string/InsertEmail"
             android:autofillHints="@string/InsertEmail"
        />
        <EditText
            android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"

            android:textColorHint="@color/green"
        android:textSize="20sp"
        android:inputType="numberPassword"
        android:hint="@string/insert_password"
        android:autofillHints="@string/InsertEmail"
        />
                <TextView
                    android:id="@+id/forgotPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:textColor="@color/purple_1000"

                    android:text="Forgot Password?"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:clickable="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/signupBtn"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_weight="1.5"
                        app:civ_border_color="@color/purple_1000"
                        app:civ_shadow="true"

                        app:civ_shadow_color="@color/purple_1000"
                        app:civ_shadow_radius="13dp"
                        app:srcCompat="@mipmap/signup_icon_foreground"
                        />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/logBtn"
                        android:layout_width="125dp"
                        android:layout_height="125dp"

                        android:layout_weight="1.5"
                        app:civ_border_color="@color/green_1000"
                        app:civ_border_width="4dp"
                        app:civ_shadow="true"
                        app:civ_shadow_color="@color/green_1000"
                        app:civ_shadow_radius="13dp"
                        app:srcCompat="@mipmap/signin_icon_foreground"

                        />


                </LinearLayout>

        </LinearLayout>
        </LinearLayout>


</LinearLayout>



